# deep-ai-research

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  NOTES.md  PLAN.md  README.md  pyproject.toml
.claude/: honesty_contract.md
.claude/agents/: contrarian.md  critic.md  deep-ai-research-contrarian.md  deep-ai-research-critic.md  deep-ai-research-fit-verifier.md  deep-ai-research-orchestrator.md  deep-ai-research-researcher.md  deep-ai-research-structure-verifier.md  deep-ai-research-synthesizer.md  deep-ai-research-verifier.md  orchestrator.md  researcher.md  synthesizer.md  verifier.md
.claude/agents/_archive/: deep-ai-research-orchestrator.md.deprecated
.claude/skills/deep-ai-research/: SKILL.md
.claude/skills/deep-research/: SKILL.md
analysis/: 2026-05-05-quality-review.md  2026-05-05-system-improvements-and-flaws.md
benchmarks/: __init__.py  _base.py  _query.py  run.py
benchmarks/scrapers/: __init__.py  openrouter.py
config/: authorities.yaml  decay.yaml  domain_penalties.yaml  embedding.yaml  paths.yaml  plan.yaml  reranker.yaml  sources.yaml
corpus_server/: __init__.py  cross_run_memory.py  reranker.py  server.py
dair_mcp/: __init__.py  server.py
docs/: distribution.md
docs/_archive/: 2026-05-05-NEXT_TASK-quality-review.md  authority-rules.md  benchmarks.md  build-plan.md  idempotency-and-drift.md  ingestion-tiers.md  mcp-tools.md  prompt-injection-defense.md  ranking-formula.md  schema.md
evals/: baseline_single_sonnet.py  cases.yaml  run_all.py  run_full_loop.py
evals/runs/: _history.jsonl
ingest/: __init__.py  _index.py  backfill_mentions.py  canonicalize.py  chunk.py  digest.py  embed.py  embed_pending.py  frontmatter.py  mention_detect.py  migrate_embedding.py  podcasts.py  poll_authorities.py  promote_arxiv.py  run.py  source_discovery.py  tag_engagements.py  viz_run.py
ingest/adapters/: __init__.py  _base.py  _reddit.py  _rss.py  ainews.py  hf_daily_papers.py  hn.py  import_ai.py  last_week_ai.py  podcast.py  tldr_ai.py
ops/: capture-usage.sh  dair-embed.service  dair-embed.timer  dair-ingest.service  dair-ingest.timer  dair-poll-authorities.service  dair-poll-authorities.timer  dair-promote-arxiv.service  dair-promote-arxiv.timer  dair-tag-engagements.service  dair-tag-engagements.timer  deep-ai-research-digest.service  deep-ai-research-digest.timer  deep-ai-research-embed.service  deep-ai-research-embed.timer  deep-ai-research-ingest.service  deep-ai-research-ingest.timer  deep-ai-research-podcasts.service  deep-ai-research-podcasts.timer  deep-ai-research-poll-authorities.service  deep-ai-research-poll-authorities.timer  deep-ai-research-promote-arxiv.service  deep-ai-research-promote-arxiv.timer  deep-ai-research-tag-engagements.service  deep-ai-research-tag-engagements.timer  install-skill.sh  install-systemd-timers.sh  register-user-mcp.sh  registry-query.sh  verify-sqlite.sh
reports/: 2026-05-04-114601-llm-personality-memory-dark-hum.md  2026-05-04-124446-best-model-personality-llm-dark-humor.md  2026-05-04-133732-what-is-the-best-model-and-per.md  2026-05-04-190759-best-model-personality-mem.md  2026-05-04-201130-find-ways-to-increase-speed.md  2026-05-04-best-personality-companion-llm.md  2026-05-04-undermine-method-find-better.md  2026-05-05-084255-what-is-the-best-model-an.md
research_outputs/: 2026-05-04-validation-of-two-research-reports.md
tests/: test_canonicalize.py  test_chunk.py  test_frontmatter.py
